--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 							<div class="12u">
 								<!-- <h3>You can find me on ...</h3> -->
 								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+									<li><a href="https://twitter.com/DaniLuque20" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/pub/daniel-luque-quintana/92/441/524" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/DrankoLQ" class="icon fa-github"><span class="label">Github</span></a></li>
 									<!-- 
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
