About me message modified

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 							<header>
 								<h1>Hello! I'm Daniel Luque</h1>
 							</header>
-							<p>I'm a computer science student at <a href="http://www.uco.es">University of Cordoba</a>. I'm currently working at <a href="https://twitter.com/piggate">Piggate</a> as iOS Developer. In my free time, I develop Android apps, my final degree app mainly, and read a lot, trying to improve myself and learn a bit more everyday.</p>
+							<p>I'm a Computer Science student at the <a href="http://www.uco.es">University of Cordoba</a>. I'm currently working at <a href="https://twitter.com/piggate">Piggate</a> as iOS Developer. In my free time, I develop Android apps, my final degree app mainly.<br>
+							I'm a member of <a href="https://plus.google.com/u/0/106302567584201009963/posts">GDG Cordoba</a> where I try to improve myself, learn new things and satisfy my curiosity.</p>
 						</div>
 					</div>
 				</article>
