--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<div class="4u">
 								<section class="box style2">
 									<span class="icon featured fa-android"></span>
-									<h3>Android development</h3>
+									<h3>Android Development</h3>
 									<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
  -->								</section>
 							</div>
@@ -79,7 +79,7 @@
 							<div class="4u">
 								<section class="box style2">
 									<span class="icon featured fa-html5"></span>
-									<h3>Web design</h3>
+									<h3>Web Design</h3>
 									<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
 								</section>
 							</div>
