Index text modified

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">About me</a></li>
-					<li><a href="#work">Work</a></li>					
+					<li><a href="#work">Work</a></li>
 					<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -47,7 +47,7 @@
 								<h1>Hello! I'm Daniel Luque</h1>
 							</header>
 							<p>I'm a Computer Science Engineer at the <a href="http://www.uco.es">University of Cordoba</a>. I'm currently doing Web and Android development for some personal projects.<br>
-							I'm a member of <a href="https://plus.google.com/u/0/106302567584201009963/posts">GDG Cordoba</a> where I try to improve myself, learn new things and satisfy my curiosity.</p>
+							I'm organizer of <a href="https://plus.google.com/u/0/106302567584201009963/posts">GDG Cordoba</a> where I try to improve myself, learn new things and satisfy my curiosity.</p>
 						</div>
 					</div>
 				</article>
@@ -160,7 +160,7 @@
 					<header>
 						<h2>You can find me on...</h2>
 						<p></p>
-					</header> 
+					</header>
 					<div class="container">
 							<div class="12u">
 								<!-- <h3>You can find me on ...</h3> -->
@@ -168,7 +168,7 @@
 									<li><a href="https://twitter.com/DaniLuque20" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/pub/daniel-luque-quintana/92/441/524" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/DrankoLQ" class="icon fa-github"><span class="label">Github</span></a></li>
-									<!-- 
+									<!--
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
