Correction in text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1>Hello! I'm Daniel Luque</h1>
                 </header>
                 <p>I'm a Computer Science Engineer at the <a href="http://www.uco.es">University of Cordoba</a>.
-                    I'm currently working as Developer at <a href="http://clickandtraining.es">Click and training</a>
+                    I'm currently working as Developer at <a href="http://clickandtraining.es">Click and Training</a>
                     <br>
                     Also, I'm organizer of <a href="https://plus.google.com/u/0/106302567584201009963/posts">GDG
                         Cordoba</a>
