--- a/index.html
+++ b/index.html
@@ -49,15 +49,9 @@
                 <header>
                     <h1>Hello! I'm Daniel Luque</h1>
                 </header>
-                <p>I'm a Computer Science Engineer at the <a href="http://www.uco.es">University of Cordoba</a>.
-                    I'm currently working as Developer at <a href="http://clickandtraining.es">Click and Training</a>
-                    <br>
-                    Also, I'm organizer of <a href="https://plus.google.com/u/0/106302567584201009963/posts">GDG
-                        Cordoba</a>
-                    where I try to improve myself, learn new things and satisfy my curiosity.
-                    Some of the things I do in GDG are organize diverse community events such as DevFest, Design & Tech,
-                    game events like Game Jam or tech talks about a lot of technology: Android, Polymer, React.js,
-                    Angular.js, etc.
+                <p>
+                  Android and iOS Developer at Piggate. Clean Code advocate. Google Developer Group Organizer.
+                  Startups ecosystem and community lover. Curious, non-conformist, geek. Learning new things everyday.
                 </p>
             </div>
         </div>
