--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <!--[if lte IE 8]>
-    <script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.scrolly.min.js"></script>
     <script src="js/skel.min.js"></script>
@@ -21,10 +19,6 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-desktop.css"/>
     </noscript>
-    <!--[if lte IE 8]>
-    <link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
-    <!--[if lte IE 9]>
-    <link rel="stylesheet" href="css/ie/v9.css"/><![endif]-->
 </head>
 <body>
 
@@ -33,7 +27,6 @@
     <ul class="container">
         <li><a href="#top">About me</a></li>
         <li><a href="#work">Work</a></li>
-        <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -50,7 +43,7 @@
                     <h1>Hello! I'm Daniel Luque</h1>
                 </header>
                 <p>
-                  Android and iOS Developer at Piggate. Clean Code advocate. Google Developer Group Organizer.
+                  Software Engineer at Midel. Clean Code advocate. Google Developer Group Organizer.
                   Startups ecosystem and community lover. Curious, non-conformist, geek. Learning new things everyday.
                 </p>
             </div>
@@ -63,7 +56,6 @@
     <article id="work">
         <header>
             <h2>Here's all the stuff I do.</h2>
-
             <p></p>
         </header>
         <div class="container">
@@ -71,109 +63,35 @@
                 <div class="4u">
                     <section class="box style2">
                         <span class="icon featured fa-android"></span>
-
                         <h3>Android Development</h3>
-                        <!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
--->                                </section>
+                    </section>
                 </div>
                 <div class="4u">
                     <section class="box style2">
                         <span class="icon featured fa-apple"></span>
-
                         <h3>iOS Development</h3>
-                        <!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
                     </section>
                 </div>
                 <div class="4u">
                     <section class="box style2">
-                        <span class="icon featured fa-html5"></span>
-
-                        <h3>Web Design</h3>
-                        <!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
+                        <span class="icon featured fa-linux"></span>
+                          <h3>Embedded Linux on ARM</h3>
                     </section>
                 </div>
             </div>
         </div>
-        <!-- 					<footer>
-                                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                                <a href="#portfolio" class="button big scrolly">See some of my recent work</a>
-                            </footer> -->
     </article>
 </div>
-
-<!-- Portfolio -->
-<!-- <div class="wrapper style3">
-    <article id="portfolio">
-        <header>
-            <h2>Here’s some stuff I made recently.</h2>
-            <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
-        </header>
-        <div class="container">
-            <div class="row">
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                        <h3><a href="#">Magna feugiat</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                        <h3><a href="#">Veroeros primis</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                        <h3><a href="#">Lorem ipsum</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-            </div>
-            <div class="row">
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                        <h3><a href="#">Tempus dolore</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                        <h3><a href="#">Feugiat aliquam</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-                <div class="4u">
-                    <article class="box style2">
-                        <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                        <h3><a href="#">Sed amet ornare</a></h3>
-                        <p>Ornare nulla proin odio consequat.</p>
-                    </article>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-            <a href="#contact" class="button big scrolly">Get in touch with me</a>
-        </footer>
-    </article>
-</div> -->
 
 <!-- Contact -->
 <div class="wrapper style4">
     <article id="contact">
         <header>
             <h2>You can find me on...</h2>
-
             <p></p>
         </header>
         <div class="container">
             <div class="12u">
-                <!-- <h3>You can find me on ...</h3> -->
                 <ul class="social">
                     <li><a href="https://twitter.com/DaniLuque20" class="icon fa-twitter"><span
                             class="label">Twitter</span></a></li>
@@ -181,58 +99,9 @@
                            class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
                     <li><a href="https://github.com/DrankoLQ" class="icon fa-github"><span
                             class="label">Github</span></a></li>
-                    <!--
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-                    <li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-                    <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-                    <li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
-                    <li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
-                    <li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-                    <li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
-                    <li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
-                    <li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
-                    <li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-                     -->
                 </ul>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="12u">
-                <form method="post" action="#">
-                    <div>
-                        <div class="row">
-                            <div class="6u">
-                                <input type="text" name="name" id="name" placeholder="Name" />
-                            </div>
-                            <div class="6u">
-                                <input type="text" name="email" id="email" placeholder="Email" />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="12u">
-                                <input type="text" name="subject" id="subject" placeholder="Subject" />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="12u">
-                                <textarea name="message" id="message" placeholder="Message"></textarea>
-                            </div>
-                        </div>
-                        <div class="row 200%">
-                            <div class="12u">
-                                <ul class="actions">
-                                    <li><input type="submit" value="Send Message" /></li>
-                                    <li><input type="reset" value="Clear Form" class="alt" /></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div> -->
     </article>
 </div>
 </body>
@@ -253,5 +122,4 @@
 
     ga('create', 'UA-63602924-1', 'auto');
     ga('send', 'pageview');
-
 </script>
