Update web content and font awesome

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/jquery.scrolly.min.js"></script>
     <script src="js/skel.min.js"></script>
     <script src="js/init.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <noscript>
         <link rel="stylesheet" href="css/skel.css"/>
         <link rel="stylesheet" href="css/style.css"/>
@@ -42,8 +43,7 @@
                         <h1>Hello! I'm Daniel Luque</h1>
                     </header>
                     <p>
-                      Software Engineer at Midel. Clean Code advocate. Google Developer Group Organizer.
-                      Startups ecosystem and community lover. Curious, non-conformist, geek. Learning new things everyday.
+                      Software Engineer at <a href="https://theneonproject.org">The Neon Project</a>. Google Developer Group Organiser. Curious, non-conformist, geek. Lover of clean code, automatisation, green tests and Python 🐍
                     </p>
                 </div>
             </div>
@@ -59,22 +59,16 @@
             </header>
             <div class="container">
                 <div class="row">
-                    <div class="4u">
+                    <div class="6u">
                         <section class="box style2">
-                            <span class="icon featured fa-android"></span>
-                            <h3>Android Development</h3>
+                            <span class="fab fa-python font-size-50px"></span>
+                            <h3>Django Web Development</h3>
                         </section>
                     </div>
-                    <div class="4u">
+                    <div class="6u">
                         <section class="box style2">
-                            <span class="icon featured fa-apple"></span>
-                            <h3>iOS Development</h3>
-                        </section>
-                    </div>
-                    <div class="4u">
-                        <section class="box style2">
-                            <span class="icon featured fa-linux"></span>
-                              <h3>Embedded Linux on ARM</h3>
+                            <span class="fab fa-react font-size-50px"></span>
+                            <h3>React.js</h3>
                         </section>
                     </div>
                 </div>
@@ -92,12 +86,9 @@
             <div class="container">
                 <div class="12u">
                     <ul class="social">
-                        <li><a href="https://twitter.com/DaniLuque20" class="icon fa-twitter"><span
-                                class="label">Twitter</span></a></li>
-                        <li><a href="https://www.linkedin.com/pub/daniel-luque-quintana/92/441/524"
-                               class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                        <li><a href="https://github.com/DrankoLQ" class="icon fa-github"><span
-                                class="label">Github</span></a></li>
+                        <li><a href="https://twitter.com/DaniLuque20" class="fab fa-twitter text-decoration-none"></a></li>
+                        <li><a href="https://www.linkedin.com/pub/daniel-luque-quintana/92/441/524" class="fab fa-linkedin text-decoration-none"></a></li>
+                        <li><a href="https://github.com/DrankoLQ" class="fab fa-github text-decoration-none"></a></li>
                     </ul>
                 </div>
             </div>
